[project]
name = "predec"
version = "0.1.0"
description = "LangChain Agent with Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.12",
    "langchain-classic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[tool.poetry]
name = "predec"
version = "0.1.0"
description = "LangChain Agent with Gemini"
readme = "README.md"
authors = ["mudit"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
google-generativeai = ">=0.8.6"
langchain = ">=1.2.12"
langchain-classic = ">=1.0.2"
langchain-community = ">=0.4.1"
langchain-core = ">=1.2.18"
langchain-google-genai = ">=4.2.1"
python-dotenv = ">=1.2.2"
streamlit = ">=1.55.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
